Updates rules for firewalld integration

--- a/configs/ssh/00-vi-fail2ban.conf
+++ b/configs/ssh/00-vi-fail2ban.conf
@@ -1,5 +1,15 @@
 # /etc/fail2ban/jail.d/00-vi-fail2ban.conf
 
+[DEFAULT]
+# Ban for 1 hour
+bantime = 1h
+# Look back 10 minutes for failures
+findtime = 10m
+# Max attempts before ban
+maxretry = 5
+# Use firewalld rich rules
+banaction = firewallcmd-rich-rules
+
 [sshd]
 enabled = true
 port = 22
