--- a/configs/kitty.conf
+++ b/configs/kitty.conf
@@ -190,10 +190,10 @@ map ctrl+w close_tab
 #---
 
 #: Next tab
-map command+right next_tab
+map shift+right next_tab
 
 #: Previous tab
-map command+left previous_tab
+map shift+left previous_tab
 
 #--
 
