Change tab navigation key from shift to command

--- a/configs/tmux.conf
+++ b/configs/tmux.conf
@@ -48,10 +48,10 @@ bind t new-window
 # Rebind close window to Ctrl + a + w
 bind w kill-window
 
-# Map Shift+Right to next tab
-bind-key -n S-Right next-window
+# Map Command+Right to next tab
+bind-key -n C-Right next-window
 # Map Shift+Left to previous tab
-bind-key -n S-Left previous-window
+bind-key -n C-Left previous-window
 
 # create panes by splitting tabs horizontally or vertically using | and -
 bind | split-window -h
