Add PUID and PGID to maloja environment variables

--- a/hosts/galaxy/galaxy.yaml
+++ b/hosts/galaxy/galaxy.yaml
@@ -171,6 +171,8 @@ services:
           cpus: '0.5'
           memory: 256M
     environment:
+      - PUID=${UID}
+      - PGID=${GID}
       - MALOJA_FORCE_PASSWORD=${MALOJA_ADMIN_PASS}
       - MALOJA_DATA_DIRECTORY=/data
       - MALOJA_PROXY_IMAGES=TRUE # Whether third party images should be downloaded and served directly by Maloja (instead of just linking their URL).
