turn on automatic tab naming and set to $USER

--- a/configs/tmux.conf
+++ b/configs/tmux.conf
@@ -3,6 +3,12 @@
 
 # Plugins --------------------------------------------
 
+# Enable automatic renaming
+set-option -g automatic-rename on
+
+# Set the rename format to the current user
+set-option -g automatic-rename-format "#{USER}"
+
 set -g @plugin 'tmux-plugins/tpm' # mandatory
 set -g @plugin 'tmux-plugins/tmux-sensible' # optional recommended
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
