--- a/configs/tmux.conf
+++ b/configs/tmux.conf
@@ -2,13 +2,6 @@
 # system-wide: /etc/tmux.conf
 
 # Plugins --------------------------------------------
-
-# Enable automatic renaming
-set-option -g automatic-rename on
-
-# Set the rename format to the current user
-set-option -g automatic-rename-format "#{USER}"
-
 set -g @plugin 'tmux-plugins/tpm' # mandatory
 set -g @plugin 'tmux-plugins/tmux-sensible' # optional recommended
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
@@ -74,18 +67,23 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
-# don't rename windows automatically
-# set-option -g allow-rename off
-
 # Rebind session rename to Ctrl + a , R
 bind R command-prompt -p "New session name:" "rename-session '%%'"
 
 # Rebind window rename to Ctrl + a , r
 bind r command-prompt "rename-window '%%'"
 
+# WINDOW NAMING -----------------------------------------------
+
 # Automatic window re-naming
-set -g automatic-rename off
+#set -g automatic-rename on
 #set -g status-interval 1
+
+# Enable automatic renaming
+set-option -g automatic-rename on
+
+# Set the rename format to the current user
+set-option -g automatic-rename-format "#{USER}"
 
 # DESIGN TWEAKS ----------------------------------------------
 
