--- a/configs/tmux.conf
+++ b/configs/tmux.conf
@@ -75,15 +75,17 @@ bind r command-prompt "rename-window '%%'"
 
 # WINDOW NAMING -----------------------------------------------
 
-# Automatic window re-naming
-#set -g automatic-rename on
-#set -g status-interval 1
+# Interval to check for changes to rename based on
+set -g status-interval 1
 
 # Enable automatic renaming
 set-option -g automatic-rename on
 
 # Set the rename format to the current user
-set-option -g automatic-rename-format "#{USER}"
+#set-option -g automatic-rename-format "#{USER}"
+
+# Look up the username of the process ID (PID) running in the pane
+set -g automatic-rename-format "#(ps -o user= -p #{pane_pid})"
 
 # DESIGN TWEAKS ----------------------------------------------
 
