--- a/configs/tmux.conf
+++ b/configs/tmux.conf
@@ -75,17 +75,14 @@ bind r command-prompt "rename-window '%%'"
 
 # WINDOW NAMING -----------------------------------------------
 
-# Interval to check for changes to rename based on
+# Update the status bar every second
 set -g status-interval 1
 
 # Enable automatic renaming
 set-option -g automatic-rename on
 
 # Set the rename format to the current user
-#set-option -g automatic-rename-format "#{USER}"
-
-# Look up the username of the process ID (PID) running in the pane
-set -g automatic-rename-format "#(ps -o user= -p #{pane_pid})"
+set-option -g automatic-rename-format "#{USER}"
 
 # DESIGN TWEAKS ----------------------------------------------
 
