--- a/configs/tmux.conf
+++ b/configs/tmux.conf
@@ -79,10 +79,10 @@ bind r command-prompt "rename-window '%%'"
 set -g status-interval 1
 
 # Enable automatic renaming
-set-option -g automatic-rename on
+#set-option -g automatic-rename on
 
 # Set the rename format to the current user
-set-option -g automatic-rename-format "#{USER}"
+#set-option -g automatic-rename-format "#{USER}"
 
 # DESIGN TWEAKS ----------------------------------------------
 
