--- a/configs/tmux.conf
+++ b/configs/tmux.conf
@@ -79,7 +79,9 @@ bind r command-prompt "rename-window '%%'"
 set -g status-interval 1
 
 # Enable automatic renaming
-#set-option -g automatic-rename on
+set-option -g automatic-rename on
+
+set-option -g automatic-rename-format '#{USER}@#{pane_current_command}'
 
 # Set the rename format to the current user
 #set-option -g automatic-rename-format "#{USER}"
