--- a/configs/tmux.conf
+++ b/configs/tmux.conf
@@ -67,21 +67,19 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
+# SESSION / WINDOW NAMING --------------------------------------------
+
 # Rebind session rename to Ctrl + a , R
 bind R command-prompt -p "New session name:" "rename-session '%%'"
 
 # Rebind window rename to Ctrl + a , r
 bind r command-prompt "rename-window '%%'"
 
-# WINDOW NAMING -----------------------------------------------
-
 # Update the status bar every second
 set -g status-interval 1
 
 # Enable automatic renaming
 set-option -g automatic-rename on
-
-set-option -g automatic-rename-format '#{USER}@#{pane_current_command}'
 
 # Set the rename format to the current user
 #set-option -g automatic-rename-format "#{USER}"
