--- a/configs/tmux.conf
+++ b/configs/tmux.conf
@@ -75,14 +75,14 @@ bind R command-prompt -p "New session name:" "rename-session '%%'"
 # Rebind window rename to Ctrl + a , r
 bind r command-prompt "rename-window '%%'"
 
-# Update the status bar every second
-set -g status-interval 1
-
 # Enable automatic renaming
 set-option -g automatic-rename on
 
+# Update the status bar every second
+set -g status-interval 1
+
 # Set the rename format to the current user
-#set-option -g automatic-rename-format "#{USER}"
+set-option -g automatic-rename-format "#{USER}"
 
 # DESIGN TWEAKS ----------------------------------------------
 
